--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Musanze Market</title>
+    <meta charset="UTF-8">
+    <title>Musanze Market Order</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h2>Musanze Market Order</h2>
-    
-    <form action="4_order.php" method="POST">
-        <p>Produit: <input type="text" name="product" required></p>
-        <p>Kg: <input type="number" name="quantity" id="qte" min="1" value="1" required></p>
-        <p>Prix: <input type="number" name="price" id="prix" min="50" value="500" required></p>
-        <p>Total: <span id="totalLive">500</span> RWF</p>
-        <button type="submit">Commander</button>
-    </form>
 
-    <script src="script.js"></script>
+    <div class="container">
+        <h2>Musanze Market Order Slip</h2>
+
+        <form action="process.php" method="POST" id="orderForm">
+
+            <label for="name">Customer Name</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="quantity">Quantity (Kg)</label>
+            <input type="number" id="quantity" name="quantity" required>
+
+            <label for="price">Price per Kg</label>
+            <input type="number" id="price" name="price" required>
+
+            <h3>Total: <span id="total">0</span> RWF</h3>
+
+            <button type="submit">Submit Order</button>
+
+        </form>
+    </div>
+
+<script src="script.js"></script>
 </body>
 </html>
